# visual-change-detection

./: CMakeLists.txt  README.md
change-detection/: CMakeLists.txt
change-detection/include/: BriefDescriptor.h  Descriptor.h  Detector.h  FastDetector.h  FeatureMatch.h  FlannMatcher.h  SURFDescriptor.h  SURFDetector.h
change-detection/src/: BriefDescriptor.cpp  FastDetector.cpp  FeatureMatch.cpp  FlannMatcher.cpp  SURFDescriptor.cpp  SURFDetector.cpp  main.cpp
include/: ChangeContext.h  ChangeContextBinary.h  ChangeContextSURF.h  DetectChangeProcess.h  Utils.h
resources/mission1/color/: 1132_1504729212.613615958.txt  1133_1504729212.680179451.txt  1134_1504729212.746834314.txt  1135_1504729212.813591207.txt  1136_1504729212.880206377.txt  1137_1504729212.946847205.txt  1138_1504729213.13646957.txt
resources/mission2/color/set1/: 648_1508459484.678660354.txt  649_1508459484.804956132.txt  651_1508459484.901719006.txt  652_1508459484.944026033.txt  653_1508459485.47180631.txt  654_1508459485.101761933.txt  655_1508459485.145504187.txt
resources/mission2/color/set2/: 634_1508459483.738083987.txt  635_1508459483.796581763.txt  636_1508459483.865743963.txt  637_1508459484.2290233.txt  638_1508459484.45550608.txt  639_1508459484.88277593.txt  640_1508459484.145567010.txt
src/: Utils.cpp  main.cpp
src/changedetector/context/: ChangeContext.cpp  ChangeContextBinary.cpp  ChangeContextSURF.cpp
src/changedetector/process/: DetectChangeProcess.cpp
